# siso-agency-internal

./: .deployment-marker  .env.example  .env.prisma  .env.prisma.example  .env.test  .env.vercel.example  .eslintignore  .eslintrc.tab-safety.js  .gitignore  .mcp.json  .timebox-feedback-notes.md  .vercel-deploy-trigger  .vercelignore  ACTUAL-COMPLETION-REPORT.md  AGENT-FILES.txt  AGENT-IMPLEMENTATION-COMPLETE.md  AI-AGENT-GUIDE.md  AI-NAVIGATION-IMPROVEMENTS.md  AI_ASSISTANT_COMPLETE.md  AI_ASSISTANT_SUPABASE_GUIDE.md  AI_PLANNING_ASSISTANT_SETUP.md  ARCHITECTURE-CLEANUP-SUMMARY.md  ARCHITECTURE-FIXES.md  BLACKBOX-INTEGRATION-QUICKSTART.md  BLACKBOX-VIBE-KANBAN-INTEGRATION.md  BMAD-ARCHITECTURE-REVISED.md  CLAUDE-BMAD-FULL-BACKUP.md  CLAUDE-CODE-AUTONOMOUS-FRAMEWORKS.md  CLAUDE-SIMPLE-WORKFLOWS.md  CLAUDE-TOOL-INTELLIGENCE.md  CLAUDE.md  CODEBASE-HEALTH-REPORT.md  CODEBASE.md  COMPONENT-REGISTRY.md  COMPREHENSIVE-DUPLICATION-ANALYSIS.md  CONTINUOUS-ANALYSIS-GUIDE.md  DATABASE-MIGRATION-PLAN.md  DUAL-KANBAN-SYSTEM-GUIDE.md  ENVIRONMENT_VARIABLES.md  EXECUTION_PIPELINE.md  (+164 more)
.SISO-APP-FACTORY/: .mcp.json  README.md
.archive/: README.md  supabase-workout-migration.sql
.archive-backups/: AdminLifeLock.tsx.backup  AdminLifeLockDay-backup.tsx  Clients.tsx.bak  PartnerDashboard.tsx.bak  PortfolioSection.tsx.bak  TrainingHub.tsx.bak
.archive-src/: README.md
.autonomous/: README.md
.blackbox/: AGENT-SYSTEM-PROMPT.md  PROJECT-COMPLETE-INDEX.md  docker-compose.yml  phase-3-stats-section-implementation.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+8780 files in other folders)
